--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -63,7 +63,9 @@ $em-base: 16px !default;
 
 $default-float: left;
 
-// $body-bg: #fff;
+.row {background-color: #fff;}
+
+// $body-bg: #2e5e8d;
 // $body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
@@ -80,7 +82,8 @@ $default-float: left;
 // Colors
 
 // $primary-color: #2ba6cb;
-// $secondary-color: #e9e9e9;
+ $primary-color: #2e5e8d;
+ $secondary-color: #ddd;
 // $alert-color: #c60f13;
 // $success-color: #5da423;
 
@@ -150,7 +153,7 @@ $default-float: left;
 //
 
 // $row-width: em-calc(1000);
-// $column-gutter: em-calc(30);
+// $column-gutter: em-calc(40);
 // $total-columns: 12;
 
 //
@@ -223,7 +226,9 @@ $default-float: left;
 
 // Style anchors
 
-// $anchor-text-decoration: none;
+a:hover {text-decoration:underline;};
+
+// anchor-text-decoration: none;
 // $anchor-font-color: $primary-color;
 // $anchor-font-color-hover: darken($primary-color, 5%);
 
@@ -896,7 +901,7 @@ $default-float: left;
 
 // We use these to control the background and border styles
 
-// $panel-bg: darken(#fff, 5%);
+ $panel-bg: darken(#fff, 15%);
 // $panel-border-style: solid;
 // $panel-border-size: 1px;
 
@@ -1041,15 +1046,15 @@ $default-float: left;
 
 // We use these to set padding and hover factor
 
-// $section-title-padding: em-calc(15);
+ $section-title-padding: em-calc(10);
 // $section-content-padding: em-calc(15);
-// $section-function-factor: 10%;
+ $section-function-factor: 15%;
 
 // These style the titles
 
-// $section-title-color: #333;
+ $section-title-color: #666;
 // $section-title-color-active: #333;
-// $section-title-bg: #efefef;
+ $section-title-bg: #ddd;
 // $section-title-bg-active: darken($section-title-bg, $section-function-factor);
 // $section-title-bg-active-tabs: #fff;
 // $section-title-bg-hover: darken($section-title-bg, $section-function-factor / 2);
@@ -1058,11 +1063,17 @@ $default-float: left;
 
 // $section-border-size: 1px;
 // $section-border-style: solid;
-// $section-border-color: #ccc;
+ $section-border-color: #999;
+
+ .section-container {
+    max-width: 96%;
+    margin-left: em-calc(16);
+    margin-right: em-calc(16);
+  }
 
 // Font controls
-
-// $section-font-size: em-calc(14);
+.title {font-weight:bold; a:hover {text-decoration:none;}};
+$section-font-size: em-calc(14);
 
 // Control the color of the background and some size options
 
@@ -1255,7 +1266,7 @@ $default-float: left;
 
 // Background color for the top bar
 
-// $topbar-bg-color: #111;
+ $topbar-bg-color: #333;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
