--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,26 +6,43 @@
 <!--[if IE 9 ]>    <html class="ie9" lang="en"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
   <head>
-  	<meta charset="utf-8" />
+    <meta charset="utf-8" />
 
-  	<!-- Uncomment to make IE8 render like IE7 -->
-  	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
+    <!-- Uncomment to make IE8 render like IE7 -->
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
-  	<!-- Set the viewport width to device width for mobile -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Set the viewport width to device width for mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+    <title>Nevada Budget Division - IT Spend Survey <%= content_for?(:title) ? yield(:title) : "" %></title>
 
-  	<%= stylesheet_link_tag    "application" %>
-  	<%= javascript_include_tag "vendor/custom.modernizr" %>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/custom.modernizr" %>
+    <%= javascript_include_tag 'http://www.google.com/jsapi' %>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
+        <%- if user_signed_in? %>
+          <%= render 'users/shared/user_nav_bar' %>
+        <%- end %>
 
-    <%= yield %>
+        <%- if admin_signed_in? %>
+          <%= render 'admins/shared/admin_nav_bar' %>
+        <%- end %>
 
-    
+    <div class="row">
+      <div class="large-12 columns">
+
+        <%= yield %>
+      </div>
+    </div>
+
+    <div class="row">
+      <center><p style="font-size: .8em">Nevada Budget Division | web: <a href="http://budget.nv.gov" target="_new">budget.nv.gov</a>
+        <br>Problems with this website? email: <a href="mailto:rcook@admin.nv.gov">rcook@admin.nv.gov</a></center>
+    </div>
+
     <%= javascript_include_tag "application" %>
   </body>
 </html>
