configure survey controller to link surveys to user

--- a/app/views/users/shared/_user_nav_bar.html.erb
+++ b/app/views/users/shared/_user_nav_bar.html.erb
@@ -19,8 +19,8 @@
 	    <!-- Right Nav Section -->
 	    <ul class="right">
 			<li class="divider hide-for-small"></li>
-<!-- 			<li><%= link_to('My Budget Initiatives', initiatives_path) %></li>
- -->			<li class="has-dropdown"><a href="#"><%= current_user.email %></a>
+ 			<li><%= link_to('My Survey Responses', surveys_path) %></li>
+			<li class="has-dropdown"><a href="#"><%= current_user.email %></a>
 		        <ul class="dropdown">
 					<li><%= render 'users/menu/login_items' %></li>
 					<li><%= link_to('Edit Account Settings', edit_user_registration_path) %></li>
