revise survey form for 2014-03-03 presentation with Eric, Amy Davey

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
     </div>
 
     <div class="row">
-      <center><p style="font-size: .8em">Nevada Budget Division | web: <a href="http://budget.nv.gov" target="_new">budget.nv.gov</a>
+      <center><p style="font-size: .8em">Nevada Department of Administration | web: <a href="http://admin.nv.gov" target="_new">admin.nv.gov</a>
         <br>Problems with this website? email: <a href="mailto:rcook@admin.nv.gov">rcook@admin.nv.gov</a></center>
     </div>
 
