--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Nevada Budget Division - IT Spend Survey <%= content_for?(:title) ? yield(:title) : "" %></title>
+    <title>Nevada Department of Administration - IT Spend Survey <%= content_for?(:title) ? yield(:title) : "" %></title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/custom.modernizr" %>
