--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -18,8 +18,6 @@
                 <%= f.text_field :completing_title %>
             </div>
             <div class="large-4 columns">
-                <label>Email of person completing survey:</label>
-                <%= f.text_field :completing_email %>
             </div>
         </div>
         <div class="row">
@@ -41,9 +39,11 @@
     <fieldset>
         <legend>Server Information - Hardware</legend>
         <div class="row">
-            <div class="large-10 columns">
+            <div class="large-12 columns">
                 <label>How many servers does your agency have?</label>
             </div>
+        </div>
+        <div class="row">
             <div class="large-2 columns">
                 <%= f.number_field :num_servers %>
             </div>
@@ -64,9 +64,11 @@
     <fieldset>
         <legend>Server Information - Facilities</legend>
         <div class="row">
-            <div class="large-10 columns">
+            <div class="large-12 columns">
                 <label>In how many locations does your agency have servers?</label>
             </div>
+        </div>
+        <div class="row">
             <div class="large-2 columns">
                 <%= f.number_field :num_locations %>
             </div>
@@ -83,6 +85,8 @@
             <div class="large-1 columns">
                 <label>No</label>
                 <%= f.radio_button :colocated, "false" %>
+            </div>
+            <div class="large-10 columns">
             </div>
         </div>
         <hr>
