--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@survey) do |f| %>
+<%= simple_form_for @survey, defaults: { disabled: true } do |f| %>
   <%= f.error_notification %>
 
   <div class="form-actions">
@@ -146,15 +146,15 @@
                 <%= f.radio_button :freq_backup, "daily" %>
             </div>
             <div class="large-1 columns">
-                <%= f.label(:freq_backup_daily, "Weekly") %>
+                <%= f.label(:freq_backup_weekly, "Weekly") %>
                 <%= f.radio_button(:freq_backup, "weekly") %>
             </div>
             <div class="large-1 columns">
-                <%= f.label(:freq_backup_daily, "Monthly") %>
+                <%= f.label(:freq_backup_monthly, "Monthly") %>
                 <%= f.radio_button(:freq_backup, "monthly") %>
             </div>
             <div class="large-1 columns">
-                <%= f.label(:freq_backup_daily, "Other") %>
+                <%= f.label(:freq_backup_other, "Other") %>
                 <%= f.radio_button(:freq_backup, "other") %>
             </div>
             <div class="large-8 columns">
@@ -311,14 +311,177 @@
     </fieldset>
     <fieldset>
         <legend>Server Information - Maintenance</legend>
-        <%= f.input :who_manages %>
-        <%= f.input :who_manages_other %>
-        <%= f.input :hard_maint %>
-        <%= f.input :hard_maint_amt %>
-        <%= f.input :soft_maint %>
-        <%= f.input :soft_maint_amt %>
-        <%= f.input :contractor_support %>
-        <%= f.input :contractor_support_amt %>
+        <div class="row">
+            <div class="large-12 columns">
+                <label><p>Who manages and maintains your agency’s servers?</p></label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-3 columns">
+                <label>State Employees – Dedicated to Information Technology</label>
+            </div>
+            <div class="large-3 columns">
+                <label>State Employees – <u>Not</u> Dedicated to Information Technology</label>
+            </div>
+            <div class="large-3 columns">
+                <label>Contract Vendor(s)</label>
+            </div>
+            <div class="large-3 columns">
+                <label>Other</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-3 columns">
+                <%= f.radio_button :who_manages, "state_dedicated" %>
+            </div>
+            <div class="large-3 columns">
+                <%= f.radio_button(:who_manages, "state_not_dedicated") %>
+            </div>
+            <div class="large-3 columns">
+                <%= f.radio_button(:who_manages, "contractor") %>
+            </div>
+            <div class="large-3 columns">
+                <%= f.radio_button(:who_manages, "other") %>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-8 columns">
+                <label>If "Other", please specify:</label>
+                <%= f.text_field :who_manages_other %>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="large-12 columns">
+                <label><p>If state employees manage and maintain your agency’s servers how many Full Time Equivalent (FTE) positions perform this/these functions, including the percentage of time each FTE dedicates to this function?</p></label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-3 columns">
+                <label># FTEs:</label>
+                <%= f.number_field :fte1 %>
+            </div>
+            <div class="large-3 columns">
+                <label>% of Time:</label>
+                <%= f.number_field :fte1_prcnt %>
+            </div>
+            <div class="large-3 columns">
+                <label># FTEs:</label>
+                <%= f.number_field :fte2 %>
+            </div>
+            <div class="large-3 columns">
+                <label>% of Time:</label>
+                <%= f.number_field :fte2_prcnt %>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-3 columns">
+                <label># FTEs:</label>
+                <%= f.number_field :fte3 %>
+            </div>
+            <div class="large-3 columns">
+                <label>% of Time:</label>
+                <%= f.number_field :fte3_prcnt %>
+            </div>
+            <div class="large-3 columns">
+                <label># FTEs:</label>
+                <%= f.number_field :fte4 %>
+            </div>
+            <div class="large-3 columns">
+                <label>% of Time:</label>
+                <%= f.number_field :fte4_prcnt %>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-3 columns">
+                <label># FTEs:</label>
+                <%= f.number_field :fte5 %>
+            </div>
+            <div class="large-3 columns">
+                <label>% of Time:</label>
+                <%= f.number_field :fte5_prcnt %>
+            </div>
+            <div class="large-3 columns">
+                <label># FTEs:</label>
+                <%= f.number_field :fte6 %>
+            </div>
+            <div class="large-3 columns">
+                <label>% of Time:</label>
+                <%= f.number_field :fte6_prcnt %>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="large-10 columns">
+                <label>Does your agency have hardware maintenance agreements?</label>
+            </div>
+            <div class="large-1 columns">
+                <label>Yes</label>
+                <%= f.radio_button :hard_maint, "true" %>
+            </div>
+            <div class="large-1 columns">
+                <label>No</label>
+                <%= f.radio_button :hard_maint, "false" %>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-12 columns">
+                <label>If so, what is the amount that is spent on these agreements during a fiscal year?</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-2 columns">
+                <%= f.number_field :hard_maint_amt %>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="large-10 columns">
+                <label>Does your agency have hardware maintenance agreements?</label>
+            </div>
+            <div class="large-1 columns">
+                <label>Yes</label>
+                <%= f.radio_button :soft_maint, "true" %>
+            </div>
+            <div class="large-1 columns">
+                <label>No</label>
+                <%= f.radio_button :soft_maint, "false" %>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-12 columns">
+                <label>If so, what is the amount that is spent on these agreements during a fiscal year?</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-2 columns">
+                <%= f.number_field :soft_maint_amt %>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="large-10 columns">
+                <label>Does your agency have hardware maintenance agreements?</label>
+            </div>
+            <div class="large-1 columns">
+                <label>Yes</label>
+                <%= f.radio_button :contractor_support, "true" %>
+            </div>
+            <div class="large-1 columns">
+                <label>No</label>
+                <%= f.radio_button :contractor_support, "false" %>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-12 columns">
+                <label>If so, what is the amount that is spent on these agreements during a fiscal year?</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="large-2 columns">
+                <%= f.number_field :contractor_support_amt %>
+            </div>
+        </div>
     </fieldset>
   </div>
 
