update form for Eric, take 3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 
     <div class="row">
       <center><p style="font-size: .8em">Nevada Department of Administration | web: <a href="http://admin.nv.gov" target="_new">admin.nv.gov</a>
-        <br>Problems with this website? email: <a href="mailto:rcook@admin.nv.gov">rcook@admin.nv.gov</a></center>
+        <br>Problems with this website? email: <a href="mailto:budget@admin.nv.gov?subject=IT Spend Survey">budget@admin.nv.gov</a></center>
     </div>
 
     <%= javascript_include_tag "application" %>
