update survey form for EITS reference

--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -353,61 +353,13 @@
 
         <div class="row">
             <div class="large-12 columns">
-                <label><p>If state employees manage and maintain your agency’s servers how many Full Time Equivalent (FTE) positions perform this/these functions, including the percentage of time each FTE dedicates to this function?</p></label>
+                <label><p>If state employees manage and maintain your agency’s servers how many Full Time Equivalent (FTE) positions perform this/these functions? If an employee spends only a portion of his or her time performing these functions, please calculate accordingly. For example, an employee who works full time and spends 40% of his time performing these functions should be reported as .4 FTE; two full-time employees who each spend 50% of their time performing these functions should be reported as 1 FTE.</p></label>
             </div>
         </div>
         <div class="row">
             <div class="large-3 columns">
-                <label># FTEs:</label>
+                <label>Number of FTEs:</label>
                 <%= f.number_field :fte1 %>
-            </div>
-            <div class="large-3 columns">
-                <label>% of Time:</label>
-                <%= f.number_field :fte1_prcnt %>
-            </div>
-            <div class="large-3 columns">
-                <label># FTEs:</label>
-                <%= f.number_field :fte2 %>
-            </div>
-            <div class="large-3 columns">
-                <label>% of Time:</label>
-                <%= f.number_field :fte2_prcnt %>
-            </div>
-        </div>
-        <div class="row">
-            <div class="large-3 columns">
-                <label># FTEs:</label>
-                <%= f.number_field :fte3 %>
-            </div>
-            <div class="large-3 columns">
-                <label>% of Time:</label>
-                <%= f.number_field :fte3_prcnt %>
-            </div>
-            <div class="large-3 columns">
-                <label># FTEs:</label>
-                <%= f.number_field :fte4 %>
-            </div>
-            <div class="large-3 columns">
-                <label>% of Time:</label>
-                <%= f.number_field :fte4_prcnt %>
-            </div>
-        </div>
-        <div class="row">
-            <div class="large-3 columns">
-                <label># FTEs:</label>
-                <%= f.number_field :fte5 %>
-            </div>
-            <div class="large-3 columns">
-                <label>% of Time:</label>
-                <%= f.number_field :fte5_prcnt %>
-            </div>
-            <div class="large-3 columns">
-                <label># FTEs:</label>
-                <%= f.number_field :fte6 %>
-            </div>
-            <div class="large-3 columns">
-                <label>% of Time:</label>
-                <%= f.number_field :fte6_prcnt %>
             </div>
         </div>
         <hr>
